--- a/src/main/resources/templates/items/createItemFrom.html
+++ b/src/main/resources/templates/items/createItemFrom.html
@@ -11,7 +11,6 @@
     <form th:action="@{/items/new}" th:object="${bookForm}" method="post">
         <div class="form-group">
             <label th:for="name">상품명</label>
-
             <input type="text" th:field="*{name}" class="form-control"
                    placeholder="이름을 입력하세요"
                    th:class="${#fields.hasErrors('name')}?'form-control fieldError' : 'form-control'">
@@ -23,8 +22,7 @@
         </div>
         <div class="form-group">
             <label th:for="stockQuantity">수량</label>
-            <input type="number" th:field="*{stockQuantity}" class="form-
-control" placeholder="수량을 입력하세요"></div>
+            <input type="number" th:field="*{stockQuantity}" class="form-control" placeholder="수량을 입력하세요"></div>
         <div class="form-group">
             <label th:for="author">저자</label>
             <input type="text" th:field="*{author}" class="form-control" placeholder="저자를 입력하세요">
