--- a/src/main/resources/templates/items/createAlbumItemFrom.html
+++ b/src/main/resources/templates/items/createAlbumItemFrom.html
@@ -8,7 +8,7 @@
 <body>
 <div class="container">
     <div th:replace="fragments/bodyHeader :: bodyHeader"/>
-    <form th:action="@{/items/new}" th:object="${bookForm}" method="post">
+    <form th:action="@{/items/newAlbum}" th:object="${albumForm}" method="post">
         <div class="form-group">
             <label th:for="name">상품명</label>
             <input type="text" th:field="*{name}" class="form-control"
@@ -24,12 +24,12 @@
             <label th:for="stockQuantity">수량</label>
             <input type="number" th:field="*{stockQuantity}" class="form-control" placeholder="수량을 입력하세요"></div>
         <div class="form-group">
-            <label th:for="author">저자</label>
-            <input type="text" th:field="*{author}" class="form-control" placeholder="저자를 입력하세요">
+            <label th:for="artist">예술</label>
+            <input type="text" th:field="*{artist}" class="form-control" placeholder="예술를 입력하세요">
         </div>
         <div class="form-group">
-            <label th:for="isbn">ISBN</label>
-            <input type="text" th:field="*{isbn}" class="form-control" placeholder="ISBN을 입력하세요">
+            <label th:for="isbn">etc</label>
+            <input type="text" th:field="*{etc}" class="form-control" placeholder="기타사항을 입력하세요">
         </div>
         <button type="submit" class="btn btn-primary">Submit</button>
     </form>
